# brahe

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml
bindings/: CMakeLists.txt  brahe_py.cpp
examples/: interactive_plot.py  profile_stress_worst_cases.py  stress_benchmark.py  stress_viewer.py  stress_worst_cases_benchmark.py
include/brahe/: body_system.h  brahe.h  conics.h  event_detector.h  patcher.h  trajectory.h  trajectory_builder.h  two_body.h  types.h  vec2.h
python/brahe/: __init__.py  plotting.py  sampling.py
specs/: PHASE_1_PLAN.md  PHASE_2_PLAN.md  PHASE_3_PLAN.md  PHASE_4_PLAN.md  SPEC.md  TOP_LEVEL_PLAN.md
src/: CMakeLists.txt  body_system.cpp  brahe.cpp  event_detector.cpp  main.cpp  patcher.cpp  trajectory_builder.cpp  two_body.cpp
tests/: CMakeLists.txt  test_anomaly_conversions.cpp  test_body_builder.cpp  test_conic_classification.cpp  test_conic_invariants.cpp  test_conic_roundtrip.cpp  test_ephemeris.cpp  test_event_api.cpp  test_event_boundaries.cpp  test_event_central_radius_crossing.cpp  test_event_coarse_scan.cpp  test_event_detector_child_entry.cpp  test_event_detector_impact.cpp  test_event_detector_radial.cpp  test_event_detector_soi_exit.cpp  test_event_fuzz.cpp  test_event_invalid_input.cpp  test_event_moving_bodies.cpp  test_event_ordering.cpp  test_event_properties.cpp  test_event_radial_reachability.cpp  test_event_refinement.cpp  test_event_root_functions.cpp  test_frame_transforms.cpp  test_invalid_input.cpp  test_main.cpp  test_patch_continuity.cpp  test_patch_suppression.cpp  test_patcher.cpp  test_phase4_determinism.cpp  test_phase4_fuzz.cpp  test_phase4_properties.cpp  test_segment_chaining.cpp  test_single_segment.cpp  test_trajectory_api.cpp  test_trajectory_fixed.cpp  test_two_body_propagation.cpp  test_two_body_radial.cpp  test_types.cpp
tests_python/: test_bindings.py  test_interactive_failures.py  test_stress_performance.py  test_stress_viewer.py
